--- a/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
+++ b/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
@@ -1,23 +1,31 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FindMe.Web.App</title>
+    <title>@ViewBag.Title - FindMe B.O</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/site.css?v=5" />
+        <link rel="stylesheet" href="~/lib/fontawesome/css/font-awesome.min.css" />
     </environment>
+
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+
+    @RenderSection("css", required: false)
+
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+    <div id="topbar" class="navbar navbar-inverse navbar-fixed-top findme-color-bc-pink">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,35 +34,55 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Portal" asp-action="Index" class="navbar-brand">FindMe.Web.App</a>
+                <a asp-area="" asp-controller="App" asp-action="Index" class="navbar-brand findme-color-fc-white">
+                    <img id="logo" src="~/images/FindMe-Logo.png" height="50" />
+                    <i>Back Office</i>
+                </a>
             </div>
+
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Portal" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Portal" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Portal" asp-action="About">About</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="cursor-pointer">
+                        <a class="findme-color-fc-white" asp-controller="Account" asp-action="SignIn">Sign In</a>
+                    </li>
+                    <li class="cursor-pointer">
+                        <a class="dropdown-toggle findme-color-fc-white" data-toggle="dropdown" aria-expanded="false">Hello, <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a asp-area="" asp-controller="Account" asp-action="Profile">Profile</a></li>
+                            <li><a asp-area="" asp-controller="Account" asp-action="SignOut">Sign Out</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2016 - FindMe.Web.App</p>
-        </footer>
+    </div>
+
+    <div class="footer findme-color-bc-dark">
+        <h4 class="findme-color-fc-white">&copy; @DateTime.Today.Year.ToString() - FindMe Back Office</h4>
     </div>
 
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/angular/angular.min.js.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.3.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery">
         </script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular.min.js"
+                asp-fallback-src="~/lib/angular/angularjs/1.5.9/angular.min.js"
+                asp-fallback-test="window.jQuery">
+        </script>
+
+        
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
