--- a/FindMe.Web.Bo/wwwroot/css/site.css
+++ b/FindMe.Web.Bo/wwwroot/css/site.css
@@ -3,36 +3,91 @@
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
+.show-on-load{
+    opacity: 0;
+}
+
+#topbar {
+    height: 60px;
+}
+
+    #topbar ul.navbar-right {
+        margin-top: 5px;
+    }
+
+#logo {
+    display: inline;
+    margin-top: -10px;
+}
+
+/* FindMe's Main Backgroundcolor */
+.findme-color-bc-pink {
+    background-color: #E20E53 !important;
+}
+
+/* FindMe's Main Darker Backgroundcolor */
+.findme-color-bc-pinkdark {
+    background-color: #C00C48 !important;
+}
+
+/* FindMe's Dark Backgroundcolor */
+.findme-color-bc-dark {
+    background-color: #424242 !important;
+}
+
+/* FindMe's Main forecolor */
+.findme-color-fc-white {
+    color: #EDF1F8 !important;
+}
+
+/* FindMe's Main forecolor */
+.findme-color-fc-pink {
+    color: #E20E53 !important;
+}
+
+/* FindMe's Dark Backgroundcolor */
+.findme-color-fc-dark {
+    color: #424242 !important;
+}
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
+.dropdown-toggle:active, .open .dropdown-toggle {
+    background-color: #C00C48 !important;
+}
+
+.btn.btn-findme {
+    background-color: #E20E53 !important;
+    color: white !important;
+}
+
+    .btn.btn-findme:active {
+        background-color: #C00C48 !important;
+    }
+
 input,
 select,
 textarea {
     max-width: 280px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+.cursor-pointer {
+    cursor: pointer;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"]
-{
+.footer {
+    position: fixed;
     width: 100%;
+    bottom: 0;
+    height: 35px;
 }
 
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-  /* Hide captions */
-  .carousel-caption {
-    display: none
-  }
-}
+    .footer h4 {
+        margin-top: 8px;
+        margin-right: 25px;
+        position: fixed;
+        right: 0;
+    }
