--- a/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
+++ b/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/colors.css" />
         <link rel="stylesheet" href="~/css/site.css?v=5" />
         <link rel="stylesheet" href="~/lib/fontawesome/css/font-awesome.min.css" />
     </environment>
@@ -57,6 +58,7 @@
         </div>
     </div>
 
+
     <div class="container body-content">
         @RenderBody()
     </div>
@@ -82,7 +84,7 @@
                 asp-fallback-test="window.jQuery">
         </script>
 
-        
+
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
