--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -1,8 +1,23 @@
 ﻿@{
-    ViewBag.Title = "";
+    ViewBag.Title = "App";
+}
+
+
+@section css {
+    <link rel="stylesheet" href="~/css/app/index.css" />
+}
+
+@section scripts {
+
+    <script src="~/js/app/index.js"></script>
+
 }
 
 
 <div>
+
+    <div id="sideBar">
+
+    </div>
 
 </div>
