--- a/FindMe.Web.Bo/wwwroot/css/site.css
+++ b/FindMe.Web.Bo/wwwroot/css/site.css
@@ -52,34 +52,39 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: #EDF1F8;
+        background-color: white; /*#EDF1F8;*/
         border: 1.5px solid #E20E53;
         border-radius: 4px;
         box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
     }
 
-        .check-box label.lbl-chkb::after {
-            content: '';
-            width: 9px;
-            height: 5px;
-            position: absolute;
-            top: 5px;
-            left: 4px;
-            border: 3px solid #333;
-            border-top: none;
-            border-right: none;
-            background: transparent;
-            opacity: 0;
-            -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-        }
+    .check-box:disabled {
+        cursor: not-allowed;
+    }
+
+    .check-box label.lbl-chkb::after {
+        content: '';
+        width: 9px;
+        height: 5px;
+        position: absolute;
+        top: 5px;
+        left: 4px;
+        border: 3px solid #333;
+        border-top: none;
+        border-right: none;
+        background-color: white;
+        opacity: 0;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
 
     /*.check-box label.lbl-chkb:hover::after {
             opacity: 0.5;
         }*/
 
-    .check-box:hover > label.lbl-chkb::after {
-        opacity: 0.5;
+    .check-box:hover:not([disabled]) > label.lbl-chkb {/*::after {*/
+        /*opacity: 0.5;*/
+        box-shadow: inset 1px 1px 1px #f6b3c9, 1px 1px 5px rgba(226, 14, 83, 0.55);
     }
 
     .check-box input[type=checkbox] {
