--- a/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
+++ b/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     bool hasAccess = Html.UserHasSignedInCookie(out fullName);
 }
 
+
 <!DOCTYPE html>
 <html>
 
@@ -15,16 +16,23 @@
     <title>@ViewBag.Title - @rscMngr.GetLabel("Lbl_AppName") B.O</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/colors.css" />
-        <link rel="stylesheet" href="~/css/site.css?v=5" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/themes/paper/bootstrap.min.css" />
         <link rel="stylesheet" href="~/lib/fontawesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/colors.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/site.css", (string)ViewBag.WebRootPath)" />
     </environment>
 
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+
+        <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/themes/paper/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+
+        <link rel="stylesheet" href="~/css/colors.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 
@@ -33,18 +41,28 @@
 </head>
 
 <body>
+    <span id="respTracker">
+        <span class="visible-xs"></span>
+        <span class="visible-sm"></span>
+        <span class="visible-md"></span>
+        <span class="visible-lg"></span>
+    </span>
 
     <div id="topbar" class="navbar navbar-inverse navbar-fixed-top findme-color-bc-pink">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+                @if (hasAccess)
+                {
+                    <button type="button" class="navbar-toggle btn-user findme-color-fc-white" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="fa fa-user-circle-o fa-2x"></span>
+                    </button>
+                }
+                else
+                {
+                    <a class="navbar-toggle findme-color-fc-white" data-toggle="collapse" data-target=".navbar-collapse" asp-controller="Account" asp-action="SignIn">Sign In</a>
+                }
                 <a asp-area="" asp-controller="App" asp-action="Index" class="navbar-brand findme-color-fc-white">
-                    <img id="logo" src="~/images/FindMe-Logo.png" height="50" />
+                    <img id="logo" src="~/images/FindMe-Logo.png" height="43" />
                     <i>Back Office</i>
                 </a>
             </div>
@@ -57,8 +75,8 @@
                         <li class="cursor-pointer">
                             <a class="dropdown-toggle findme-color-fc-white" data-toggle="dropdown" aria-expanded="false">@rscMngr.GetLabel("Lbl_HelloNm").Replace("{0}", fullName).Replace("{1}", rscMngr.GetLabel("Lbl_NoNm"))<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a asp-area="" asp-controller="Account" asp-action="Profile">@rscMngr.GetLabel("Lbl_Profile")</a></li>
-                                @*<li><a asp-area="" asp-controller="Account" asp-action="SignOut">@rscMngr.GetLabel("Lbl_SignOut")</a></li>*@
+                                <li><a id="profile">@rscMngr.GetLabel("Lbl_Profile")</a></li>
+                                <li class="divider"></li>
                                 <li><a id="signOut">@rscMngr.GetLabel("Lbl_SignOut")</a></li>
                             </ul>
                         </li>
@@ -75,19 +93,18 @@
     </div>
 
 
-    <div class="container body-content">
+    <div id="renderBody" class="container-fluid">
         @RenderBody()
     </div>
 
     <div class="footer findme-color-bc-dark">
-        <h4 class="findme-color-fc-white">&copy; @DateTime.Today.Year.ToString() - @rscMngr.GetLabel("Lbl_AppName") Back Office</h4>
+        <span class="findme-color-fc-white">&copy; @DateTime.Today.Year.ToString() - @rscMngr.GetLabel("Lbl_AppName") Back Office</span>
     </div>
 
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/angular/angular.min.js.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="@Url.GetResPath("~/js/site.js", (string)ViewBag.WebRootPath)" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.3.min.js"
@@ -95,16 +112,11 @@
                 asp-fallback-test="window.jQuery">
         </script>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular.min.js"
-                asp-fallback-src="~/lib/angular/angularjs/1.5.9/angular.min.js"
-                asp-fallback-test="window.jQuery">
-        </script>
-
-
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
+
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
