--- a/FindMe.Web.Bo/wwwroot/css/colors.css
+++ b/FindMe.Web.Bo/wwwroot/css/colors.css
@@ -14,6 +14,22 @@
     background-color: #424242 !important;
 }
 
+/* FindMe's Darker Backgroundcolor */
+.findme-color-bc-darker {
+    background-color: #1a1a1a !important;
+}
+
+/* FindMe's Yellow Backgroundcolor */
+.findme-color-bc-yellow {
+    background-color: #FECC00 !important;
+}
+
+/* FindMe's Light Gray Backgroundcolor */
+.findme-color-bc-lgray {
+    background-color: #e9e9e9 !important;
+}
+
+
 /* FindMe's Main forecolor */
 .findme-color-fc-white {
     color: #EDF1F8 !important;
@@ -24,7 +40,17 @@
     color: #E20E53 !important;
 }
 
-/* FindMe's Dark Backgroundcolor */
+/* FindMe's Dark forecolor */
 .findme-color-fc-dark {
     color: #424242 !important;
+}
+
+/* FindMe's Yellow forecolor */
+.findme-color-fc-yellow {
+    color: #FECC00 !important;
+}
+
+/* FindMe's Light Gray forecolor */
+.findme-color-fc-lgray {
+    color: #F3F3F4 !important;
 }
